BugFix: Dropdown not showing

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body{
       overflow: scroll;
       box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.12);
       z-index: 1;
-      margin-left: 250px;
+      margin-left: 0px;
     }
 
     .dropdown-content a, .dropdown-content2 a {
